# cuckoo

./: .gitignore  CMakeLists.txt  README.md  cuckoo.cpp  cuckoo.h  hello.py  main.cpp  pyproject.toml  sip12.cpp  sip12.h  tests.cpp
baseline/: baseline_lean.csv
bench/: bench.cc  bench.h
cli/: main.cc
cuckoo/: __init__.py  api.py  cli.py  graph.cc  graph.h  hashing.py  lean_solver.cc  lean_solver.h  mean_solver.cc  mean_solver.h  solver.py
docs/: cuckoo_sip_solver.aux  cuckoo_sip_solver.tex
scripts/: bench.py
src/: bitset.h  siphash.cc  siphash.h  siphash12.cc  siphash12.h  util.cc  util.h
tests/: test_hashing.py  test_hello.py  test_solver_api.py  test_verify.py
verify/: verify.cc  verify.h
