[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "cuckoo-solver"
version = "0.1.1"
description = "Linear-time memory tradeoff solver for Cuckoo/Cuckatoo cycles (length 42)"
readme = "README.md"
authors = [{ name = "OSS Contributors" }]
requires-python = ">=3.10"
dependencies = [
    "psutil>=5.9.0"
]

[project.scripts]
cuckoo-solve = "cuckoo.cli:main"

[tool.pytest.ini_options]
minversion = "7.0"
addopts = "-q"
pythonpath = ["."]
